# tunemasterfix

./: .gitignore  README.md  Spotify_class.py  User_class.py  Youtube_class.py  buildozer.spec  flask_app.py  main.py  old_main.py  pyproject.toml
Screens/: __init__.py  main_screen.py  processing_screen.py  select_sp_pl_screen.py  select_youtube_pl_screen.py
data/: __init__.py
templates/: finished_login.html
