[tool.poetry]
name = "tunetransfer"
version = "0.1.0"
description = ""
authors = ["AccelQuasarDragon <138998466+AccelQuasarDragon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kivy = "^2.3.1"
flask = "^3.1.1"
google-auth-oauthlib = "^1.2.2"
google-api-python-client = "^2.174.0"
jaro-winkler = "^2.0.3"
spotipy = "^2.25.1"
youtube-search = "^2.1.2"
buildozer = "^1.5.0"
cython = "^0.29.34"
pyjnius = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
